syntax = "proto3";

option go_package = "/pb";

import "google/protobuf/timestamp.proto";

package pb;

service Consumer {
    rpc DataStream(requestDataStream) returns (stream responseDataStream) {}
}

message requestDataStream {
    bool start = 1;
}

message responseDataStream {
    google.protobuf.Timestamp date = 1;
    decimal bid = 2;
    decimal ask = 3; 
    string symbol = 4;

    message decimal {
        int64 value = 1;
        int32 exp = 2;
    }
}